cabal-version:      3.0
name:               learn-haskell-by-blog-generator
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             yongjulejule
maintainer:         lyjshow200@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  -- Html.Internal Module is exposed for testing. I think it is not a good idea but I don't know how to test it without exposing it.
  exposed-modules: Html, Html.Internal 
  -- other-modules: Html.Internal
  build-depends: base
  default-language: Haskell2010

executable learn-haskell-by-blog-generator
    import:           warnings
    main-is:          Hello.hs
    build-depends:    base ^>=4.17.2.1, learn-haskell-by-blog-generator
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Spec.hs
  build-depends: base, hspec, learn-haskell-by-blog-generator
  default-language: Haskell2010

