[package]
name = "playback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
tokio = { version = "1", features = ["full"] }
